# XMLTokenizer

./: CMakeLists.txt
.github/workflows/: run-tests.yml
example_files/: library.xml  reminder.xml
samples/: CMakeLists.txt  tokenizer_sample.cpp
src/: CMakeLists.txt  tokenizer.cpp  tokenizer.h
test/: CMakeLists.txt  tokenizer_test.cpp
